Ensures that whitespace is preserved in longform text on reports, concerns, and verifications.

--- a/app/assets/stylesheets/concerns.css
+++ b/app/assets/stylesheets/concerns.css
@@ -55,6 +55,7 @@
 
 #backstage-container .concern-item .item-text.small {
   font-size: 0.9em;
+  white-space: preserve;
 }
 
 #backstage-container .concern-item .item-text img {
