--- a/app/assets/stylesheets/verifications.css
+++ b/app/assets/stylesheets/verifications.css
@@ -236,6 +236,7 @@
 
 #backstage-container .verification-item .item-text.small {
   font-size: 0.9em;
+  white-space: preserve;
 }
 
 #backstage-container .verification-item .item-text img {
